# WebsiteScreenshotter

./: README.md
client/: index.html  package-lock.json  package.json  tsconfig.json
client/src/: App.sass  App.tsx  index.css
client/src/api/: index.ts
client/src/components/TurnstileWidget/: TurnstileWidget.tsx
client/src/components/WebsiteImage/: WebsiteImage.tsx
client/src/components/WebsiteUrlInput/: WebsiteUrlInput.sass  WebsiteUrlInput.tsx
server/: pyproject.toml  requirements.txt
server/scripts/: dev.py  prod.py
server/src/cache/: __init__.py  main.py
server/src/config/: __init__.py  main.py
server/src/screenshot/: __init__.py  main.py
server/src/server/: main.py
