[project]
name = "server"
version = "0.1.0"
description = ""
authors = [
    { name = "dimabreus", email = "dmitriybreus5@gmail.com" }
]
package-mode = false
requires-python = ">=3.9,<4.0"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "slowapi (>=0.1.9,<0.2.0)",
    "selenium (>=4.33.0,<5.0.0)",
    "pydantic (>=2.11.5,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "python-dotenv (>=1.1.0,<2.0.0)"
]

[tool.poetry.scripts]
dev = "scripts.dev:main"
prod = "scripts.prod:main"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
